	* Two new TS constants: enableAdminNotifyOnAdminAccept and enableAdminNotifyOnAdminRefuse.
	* Remove locally defined quoteJSvalue and getUpdateJS (these were fixed in TYPO3 4.0).
	* Use TCA-driven field module_sys_dmail_html in css-styled template.
	* If usergroup selection is enabled on edit, keep usergroups set by confirmation or acceptation.

2006-03-25 Stanislas Rolland  <stanislas.rolland(arobas)fructifor.ca>
	* Add TS setup property extraLabels. Thanks to Dmitry Dulepov.

2006-03-22 Stanislas Rolland  <stanislas.rolland(arobas)fructifor.ca>
	* Adjustments to make the extension compatible with system extension Database Abstraction Layer (dbal).
	* Correct bugtracker issue 2912: some missing slashes.
	* Preserve <url> constructs in plain text html template. See bugtracker issue 1966.

2006-03-08 Stanislas Rolland  <stanislas.rolland(arobas)fructifor.ca>
	* Remove locally extended t3lib_htmlmail (fixed in TYPO3 4.0).

2006-03-08 Stanislas Rolland  <stanislas.rolland(arobas)fructifor.ca>
	* Add short URL's feature. Thanks to Steve Webster.
	* Update requirements to TYPO3 4.0.0
	* Correct processing of module_sys_dmail fields when Direct Mail is not installed.
	* Modify plugin initialization: remove constructor and initId method.

2006-03-03 Stanislas Rolland  <stanislas.rolland(arobas)fructifor.ca>
	* Update Danish localization.
	* Update version number to 2.3.0
	* On edit, do not reset the username if we have no new value

2006-03-01 Stanislas Rolland  <stanislas.rolland(arobas)fructifor.ca>
	* Add support for localization of MM relations when configured on the foreign table.
	* Add constant and setup property module_sys_dmail_category_PIDLIST
	* Update to the requirements section of the manual
	* Small cleaning changes in class.tx_srfeuserregister_pi1.php and static templates setup.txt

2006-02-03 Stanislas Rolland  <stanislas.rolland(arobas)fructifor.ca>
	* Honor TCA default value for TCA-driven multiple checkboxes. Thanks to Simon Tuck.